Clarify documentation about stubfiles in checker.jar

--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -587,7 +587,8 @@ For the Javadoc classes in the JDK's \<com.sun.javadoc> package,
 % are not exposed by ct.sym and therefore cannot be part of an
 % annotated JDK
 use the stub file \<checker/resources/javadoc.astub> by using \<-Astubs=checker.jar/javadoc.astub>.
-% Note: that this syntax only works for checker.jar.
+The ``\<checker.jar>'' should be literal --- don't provide a path.
+(This special syntax only works for ``\<checker.jar>''.)
 \end{itemize}
 
 
