--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+Version 3.3.0, April 1, 2020
+
+Implementation details:
+ * Removed `@DefaultInUncheckedCodeFor` and
+   `@DefaultQualifierInHierarchyInUncheckedCode`.  The conservative default
+   cannot be overridden by the type system designer.
+
+---------------------------------------------------------------------------
+
 Version 3.2.0, March 2, 2020
 
 @SuppressWarnings("initialization") suppresses only warnings whose key
@@ -5,7 +14,6 @@ contains "initialization".  Previously, it suppressed all warnings issued
 by the Nullness Checker or the Initialization Checker.
 
 Closed issues:
-
 2719, 3001, 3020, 3069, 3093, 3120.
 
 ---------------------------------------------------------------------------
@@ -30,7 +38,6 @@ Implementation details:
    Analysis#Analysis(T), and Analysis#Analysis(T, int) instead.
 
 Closed issues:
-
 2181, 2975, 3018, 3022, 3032, 3036, 3037, 3038, 3041, 3049, 3055, 3076.
 
 ---------------------------------------------------------------------------
@@ -50,7 +57,6 @@ Implementation details:
  * Renamed ConditionalPostcondition#annoResult to ConditionalPostcondition#resultValue.
 
 Closed issues:
-
 2867, 2897, 2972.
 
 ---------------------------------------------------------------------------
@@ -66,7 +72,6 @@ Implementation details:
  * Deprecated AnnotatedTypes#isTypeAnnotation and AnnotatedTypes#hasTypeQualifierElementTypes.
 
 Closed issues:
-
 945, 1224, 2024, 2744, 2809, 2815, 2818, 2830, 2840, 2853, 2854, 2865, 2873,
 2874, 2878, 2880, 2886, 2888, 2900, 2905, 2919, 2923.
 
