Note that a tutorial is out of date

--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -407,12 +407,12 @@ Additional topics that apply to all checkers are covered later in the manual:
 \end{itemize}
 
 
-Finally, there is a
+There is a
 \ahreforurl{https://checkerframework.org/tutorial/}{tutorial}
 that walks you through using the Checker Framework on the
-command line, and a separate
+command line.  There is also a
 \ahreforurl{https://github.com/glts/safer-spring-petclinic/wiki}{Nullness
-  Checker tutorial} by David B\"urgin.
+  Checker tutorial} by David B\"urgin (last updated in April 2016).
 
 % The annotations have to be on your classpath even when you are not using
 % the -processor, because of the existence of the import statement for
