--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+Version 3.3.0, April 1, 2020
+
+Implementation details:
+ * Removed `@DefaultInUncheckedCodeFor` and
+   `@DefaultQualifierInHierarchyInUncheckedCode`.
+
+---------------------------------------------------------------------------
+
 Version 3.2.0, March 2, 2020
 
 @SuppressWarnings("initialization") suppresses only warnings whose key
