Rename "unchecked code defaults" to "conservative defaults"

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,18 @@
 Version 3.3.0, April 1, 2020
 
+Renamings:
+  "unchecked code defaults" to "conservative defaults".
+  -AuseDefaultsForUncheckedCode to -AuseConservativeDefaultsForUncheckedCode
+    The old name works temporarily but will be removed in a future release.
+  @DefaultQualifierInHierarchyInUncheckedCode to @ConservativeDefaultQualifierInHierarchy
+  @DefaultInUncheckedCodeFor to @ConservativeDefaultFor
+
 Implementation details:
  * Removed `@DefaultInUncheckedCodeFor` and
    `@DefaultQualifierInHierarchyInUncheckedCode`.
+ * Renamings:
+   applyUncheckedCodeDefaults() to applyConservativeDefaults()
+   useUncheckedCodeDefault() to useConservativeDefault()
 
 ---------------------------------------------------------------------------
 
