--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -667,17 +667,21 @@ More sound (strict) checking: enable errors that are disabled by default
   are the same.  By default, the Checker Framework unsoundly permits them
   to differ, just as Java does.  See Section~\ref{covariant-type-parameters}
   and Section~\ref{invariant-arrays}.
-\item \<-AuseDefaultsForUncheckedCode>
-  Enables/disables unchecked code defaults.  Takes arguments ``source,bytecode''.
+\item \<-AuseConservativeDefaultsForUncheckedCode>
+  Enables/disables conservative defaults in unchecked code.  Takes arguments ``source,bytecode''.
   ``-source,-bytecode'' is the (unsound) default setting.
+  \begin{itemize}
+  \item
   ``bytecode'' specifies
-  whether the checker should apply unchecked code defaults to
+  whether the checker should apply conservative defaults to
   bytecode (that is, to already-compiled libraries); see
   Section~\ref{defaults-classfile}.
+  \item
   Outside the scope of any relevant
-  \refqualclass{framework/qual}{AnnotatedFor} annotation, ``source'' specifies whether unchecked code
+  \refqualclass{framework/qual}{AnnotatedFor} annotation, ``source'' specifies whether conservative
   default annotations are applied to source code and suppress all type-checking warnings; see
   Section~\ref{compiling-libraries}.
+  \end{itemize}
 \item \<-AconcurrentSemantics>
   Whether to assume concurrent semantics (field values may change at any
   time) or sequential semantics; see Section~\ref{faq-concurrency}.
@@ -752,9 +756,9 @@ Partially-annotated libraries
   Warn if a stub file entry is redundant with bytecode information; see
   Section~\ref{stub-using}.
 % This item is repeated above:
-\item \<-AuseDefaultsForUncheckedCode=source>
+\item \<-AuseConservativeDefaultsForUncheckedCode=source>
   Outside the scope of any relevant
-  \refqualclass{framework/qual}{AnnotatedFor} annotation, use unchecked code
+  \refqualclass{framework/qual}{AnnotatedFor} annotation, use conservative
   default annotations and suppress all type-checking warnings; see
   Section~\ref{compiling-libraries}.
 \end{itemize}
@@ -1515,7 +1519,7 @@ same methodology in different words.
 % LocalWords:  NullnessChecker commandlineargfile AnnotatedFor Xmx2500m
 % LocalWords:  AsafeDefaultsForUnannotatedBytecode Signedness Werror
 % LocalWords:  AuseSafeDefaultsForUnannotatedSourceCode beingConstructed
-% LocalWords:  AuseDefaultsForUncheckedCode AresolveReflection Ainfer
+% LocalWords:  AuseConservativeDefaultsForUncheckedCode AresolveReflection Ainfer
 % LocalWords:  AconservativeUninferredTypeArguments Averbosecfg Acfgviz
 % LocalWords:  AstubWarnIfOverwritesBytecode AprintVerboseGenerics
 % LocalWords:  AatfDoNotCache AatfCacheSize IntRange AwarnIfNotFound
