--- a/docs/manual/faq.tex
+++ b/docs/manual/faq.tex
@@ -82,6 +82,8 @@ fully-qualified type name?
 \\ \ref{faq-classpath-to-use-annotated-library}: What classpath is needed to use an annotated library?
 \\ \ref{faq-classfile-annotations}: Why do \<.class> files contain more annotations than the source code?
 \\ \ref{faq-checked-exceptions}: Is there a type-checker for managing checked and unchecked exceptions?
+\\ \ref{faq-cf-is-slow}: The Checker Framework runs too slowly
+
 
 \faqtocpara{\ref{faq-other-tools-section}: Relationship to other tools}
 \\ \ref{faq-type-checking-vs-bug-detectors}: Why not just use a bug detector (like FindBugs or Error Prone)?
@@ -1500,6 +1502,33 @@ effects.  The GUI Effect Checker (\chapterpageref{guieffect-checker}) is a
 type-and-effect system that is distributed with the Checker Framework.
 
 
+\subsectionAndLabel{The Checker Framework runs too slowly}{faq-cf-is-slow}
+
+Using a pluggable type-checker increases compile times by a factor of 2-5.
+Slow compilation speed is probably the worst thing about the Checker
+Framework.
+
+If the Checker Framework is too slow for you to run on every compilation,
+you can run it periodically, such as in a Git commit hook or in continuous
+integration.
+
+The Checker Framework team does not currently have the resources to fix
+performance problems, but we welcome community contributions.
+
+Here are some reasons that the Checker Framework is so slow.
+\begin{itemize}
+\item
+  It has to do all the same work as the compiler does, such as resolving
+  overloading/overriding/generics and type-checking.  It does so for
+  richer, user-defined type systems whereas \<javac> hard-codes one type
+  system.
+\item
+  Its implementation has some inefficiencies.  For example, when running a
+  compound or aggregate checker, it makes multiple passes over the program
+  rather than just one.
+\end{itemize}
+
+
 \sectionAndLabel{Relationship to other tools}{faq-other-tools-section}
 
 
@@ -1758,4 +1787,5 @@ third-party tools.  The Checker Framework is one such tool.
 %%  LocalWords:  NoSuchElementException binarySearch subclasses faq awarns
 %%  LocalWords:  intExample1 intExample2 requiresPositive RUNTIME NullAway
 %%  LocalWords:  IllegalFormatException typequals typedef runtime nullaway
-%%  LocalWords:  covariance InheritedAnnotation someMethod jml jsr
+%%  LocalWords:  covariance InheritedAnnotation someMethod jml jsr Java''
+% LocalWords:  checkers'' covariance'' contravariance''
