Improve link anchor text

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -836,8 +836,8 @@ Therefore, you must run the Checker Framework in a postpass after the
 \href{https://projectlombok.org/features/delombok}{Delombok} tool
 (distributed with Lombok) to generate Java source code, then run the
 Checker Framework on that.  The
-\href{https://github.com/kelloggm/checkerframework-gradle-plugin}{Checker Framework}
-Gradle plugin does this for you automatically.
+\href{https://github.com/kelloggm/checkerframework-gradle-plugin}{Checker
+  Framework Gradle plugin} does this for you automatically.
 
 
 \sectionAndLabel{Maven}{maven}
