Add changelog entry

--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,8 @@ Implementation details:
  * Renamings:
    applyUncheckedCodeDefaults() to applyConservativeDefaults()
    useUncheckedCodeDefault() to useConservativeDefault()
+ * Removed the `framework.source.Result` class.
+    * Changed the arguments to `SourceChecker.report`, which took a `Result`.
 
 ---------------------------------------------------------------------------
 
