Add to Maven example: <showWarnings>true</showWarnings>

--- a/docs/manual/external-tools.tex
+++ b/docs/manual/external-tools.tex
@@ -1001,6 +1001,7 @@ For example, to use the \code{org.checkerframework.checker.nullness.NullnessChec
         <Xmaxerrs>10000</Xmaxerrs>
         <Xmaxwarns>10000</Xmaxwarns>
       </compilerArguments>
+      <showWarnings>true</showWarnings>
       <annotationProcessorPaths>
         <path>
           <groupId>org.checkerframework</groupId>
