--- a/checker/jtreg/README
+++ b/checker/jtreg/README
@@ -8,3 +8,7 @@ There are a few cases when jtreg is appropriate:
    in the test file itself.
  * The jtreg approach makes it possible to check that an error message
    was output two times.
+
+Sometimes you should put tests in a directory such as
+checker-framework/checker/tests/nullness-extra ,
+such as when it uses multiple Java files.
