--- a/docs/manual/annotating-libraries.tex
+++ b/docs/manual/annotating-libraries.tex
@@ -537,8 +537,8 @@ In other words:
   % Use the \<-AstubWarnIfOverwritesBytecode> command-line option to get a
   % warning whenever a stub file overwrites bytecode annotations.
 \item
-  If a stub file does not mention a method or field, its annotations are
-  taken from bytecode.
+  If a stub file does not mention a method or field (and no source is
+  available), its annotations are taken from bytecode.
 \end{itemize}
 
 If a method appears in more than one stub file (or twice in the same
