Change reference to Javadoc URL

--- a/docs/manual/creating-a-checker.tex
+++ b/docs/manual/creating-a-checker.tex
@@ -847,10 +847,11 @@ optional, and many checker classes do not have one.)
 
 The checker class bridges between the Java compiler and the checker.  It
 invokes the type-rule check visitor on every Java source file being
-compiled, and provides a simple API,
-\refmethod{framework/source}{SourceChecker}{report}
-{-org.checkerframework.framework.source.Result-java.lang.Object-}, to issue
-errors using the compiler error reporting mechanism.
+compiled.  The checker uses
+\refmethod{framework/source}{SourceChecker}{reportError}{-java.lang.Object-org.checkerframework.framework.source.Result-java.lang.Object:A-}
+and
+\refmethod{framework/source}{SourceChecker}{reportWarning}{-java.lang.Object-org.checkerframework.framework.source.Result-java.lang.Object:A-}
+to issue errors.
 
 Also, the checker class follows the factory method pattern to
 construct the concrete classes (e.g., visitor, factory) and annotation
