--- a/checker/src/main/java/org/checkerframework/checker/nullness/messages.properties
+++ b/checker/src/main/java/org/checkerframework/checker/nullness/messages.properties
@@ -11,5 +11,7 @@ known.nonnull=redundant check; "%s" is non-null
 nonnull.nonstatic.with.class=Field "%s" is not static but uses a class name
 class.not.found.nullness.parse.error=Class not found for field "%s"
 field.not.found.nullness.parse.error=Field "%s" not found
-new.array.type.invalid=Annotations %s may not be applied as component type for array "%s"
+new.array.type.invalid=annotations %s may not be applied as component type for array "%s"
 new.class.type.invalid=the annotations %s do not need be applied in object creations
+toArray.nullable.elements.not.newarray=collection of non-null elements is being converted into an array of possibly-null elements; omit the argument to toArray or make it an explicit array constructor
+toArray.nullable.elements.mismatched.size=collection of non-null elements is being converted into an array of possibly-null elements; cannot determine that the argument array has the same size as the receiver collection
