--- a/changelog.txt
+++ b/changelog.txt
@@ -7,11 +7,10 @@ Renamings:
 Implementation details:
  * Removed `@DefaultInUncheckedCodeFor` and
    `@DefaultQualifierInHierarchyInUncheckedCode`.
- * Added boolean `hasError` parameter to
-   AbstractTypeProcessor#typeProcessingOver()
  * Renamings:
    applyUncheckedCodeDefaults() to applyConservativeDefaults()
    useUncheckedCodeDefault() to useConservativeDefault()
+ * AbstractTypeProcessor#typeProcessingOver() always gets called
  * Deprecated the `framework.source.Result` class; use `DiagMessage` or
    `List<DiagMessage>` instead.  If you were creating a `Result` just to
    pass it to `report`, then call new methods `reportError` and
