--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -104,12 +104,8 @@ command-line option.)
   \code{-Astubs=collection-object-parameters-may-be-null.astub}
   command-line option, then in JDK collection classes, the checker
   unsoundly permits null as an argument for any key or value formal
-  parameter whose type is Object (instead of the element type).
-
-  A null argument may cause some implementations (like ConcurrentHashMap)
-  to throw NullPointerException. However, many other common implementations
-  permit such calls, so some users may wish to sacrifice soundness for
-  convenience.
+  parameter whose type is \<Object> (instead of the element type).
+  See Section~\ref{nullness-collection-arguments}.
 
 \end{itemize}
 
@@ -645,6 +641,27 @@ the distinction between warning suppression and defensive programming.
 % need to be suppressed, so warning suppression needs to be customized for
 % each tool.
 \end{sloppypar}
+
+
+\subsectionAndLabel{Null arguments to collection classes}{nullness-collection-arguments}
+
+For collection methods with \<Object> formal parameter type, such as
+\sunjavadoc{java.base/java/util/Collection.html\#contains(java.lang.Object)}{contains},
+\sunjavadoc{java.base/java/util/AbstractList.html\#indexOf(java.lang.Object)}{indexOf}, and
+\sunjavadoc{java.base/java/util/Collection.html\#remove(java.lang.Object)}{remove},
+the annotated JDK forbids null as an argument.
+
+The reason is that some implementations (like \<ConcurrentHashMap>) throw
+\<NullPointerException> if \<null> is passed.  It would be unsound to
+permit \<null>, because it could lead to a false negative:  the Checker
+Framework issuing no warning even though a NullPointerException can occur
+at run time.
+
+However, many other common implementations permit such calls, so some users
+may wish to sacrifice soundness for a reduced number of false positive
+warnings.  To permit \<null> as an argument to these methods, pass the
+command-line argument
+\<-Astubs=collection-object-parameters-may-be-null.astub>.
 
 
 \sectionAndLabel{Examples}{nullness-example}
