--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,10 @@ Renamings:
   -AuseDefaultsForUncheckedCode to -AuseConservativeDefaultsForUncheckedCode
     The old name works temporarily but will be removed in a future release.
 
+For collection methods with `Object` formal parameter type, such as contains,
+indexOf, and remove, the annotated JDK forbids null as an argument.  To permit
+null, pass `-Astubs=checker.jar/collection-object-parameters-may-be-null.astub`.
+
 Implementation details:
  * Removed `@DefaultInUncheckedCodeFor` and
    `@DefaultQualifierInHierarchyInUncheckedCode`.
