Warn when toArray creates an array with nullable elements

--- a/checker/src/main/java/org/checkerframework/checker/nullness/messages.properties
+++ b/checker/src/main/java/org/checkerframework/checker/nullness/messages.properties
@@ -13,3 +13,5 @@ class.not.found.nullness.parse.error=class not found for field "%s"
 field.not.found.nullness.parse.error=Field "%s" not found
 new.array.type.invalid=annotations %s may not be applied as component type for array "%s"
 new.class.type.invalid=the annotations %s do not need be applied in object creations
+toArray.nullable.elements.not.newarray=call of toArray on collection of non-null elements yields an array of possibly-null elements; omit the argument to toArray or make it an explicit array constructor
+toArray.nullable.elements.mismatched.size=call of toArray on collection of non-null elements yields an array of possibly-null elements; cannot determine that the argument array has the same size as the receiver collection
