--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -1521,11 +1521,12 @@ same methodology in different words.
 % LocalWords:  AuseSafeDefaultsForUnannotatedSourceCode beingConstructed
 % LocalWords:  AuseConservativeDefaultsForUncheckedCode AresolveReflection Ainfer
 % LocalWords:  AconservativeUninferredTypeArguments Averbosecfg Acfgviz
-% LocalWords:  AstubWarnIfOverwritesBytecode AprintVerboseGenerics
+% LocalWords:  AstubWarnIfOverwritesBytecode AprintVerboseGenerics here''
 % LocalWords:  AatfDoNotCache AatfCacheSize IntRange AwarnIfNotFound
 % LocalWords:  AwarnUnneededSuppressions AshowInferenceSteps BHCJEIBB
 % LocalWords:  AstubWarnIfNotFoundIgnoresClasses processOptions getopt
 % LocalWords:  EnsuresNonNull EnsuresNonNullIf checkername orElseThrow
-% LocalWords:  ArequirePrefixInWarningSuppressions MaybePresent
+% LocalWords:  ArequirePrefixInWarningSuppressions MaybePresent checker''
 % LocalWords:  AignoreInvalidAnnotationLocations AprintGitProperties
-% LocalWords:  AstubWarnIfRedundantWithBytecode
+% LocalWords:  AstubWarnIfRedundantWithBytecode annotation'' AassumePure
+% LocalWords:  AassumeDeterministic
