--- a/docs/manual/i18n-format-checker.tex
+++ b/docs/manual/i18n-format-checker.tex
@@ -47,7 +47,7 @@ localization resource and all keys exist in that resource.
 \caption{The
   Internationalization
   Format String Checker type qualifier hierarchy.
-  The type qualifiers are applicable te \<CharSequence> and its subtypes.
+  The type qualifiers are applicable to \<CharSequence> and its subtypes.
   The figure does not show the subtyping rules among different
   \refqualclass{checker/i18nformatter/qual}{I18nFormat}\code{(...)}
   qualifiers; see
@@ -431,4 +431,4 @@ method to define the type of the string in the scope of a conditional statement.
 %%  LocalWords:  Timestamp AtomicInteger AtomicLong BigDecimal BigInteger
 %%  LocalWords:  number' foo subformats resource1 key1 mero Abundlenames
 %%  LocalWords:  ResourceBundles MyResource MyFile Apropfiles hasFormat
-%%  LocalWords:  I18nFormatUtil
+%%  LocalWords:  I18nFormatUtil formatter
