Improve documentation and structure.

--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -465,7 +465,7 @@ then write a \<@SuppressWarnings> annotation.
 
 \subsectionAndLabel{Nullness and conversions from collections to arrays}{nullness-collection-toarray}
 
-% Keep this in sync with the Javadoc of org.checkerframework.checker.nullness.CollectionToArrayHeuristics
+% Implemented in org.checkerframework.checker.nullness.CollectionToArrayHeuristics
 
 The semantics of
 \sunjavadoc{java.base/java/util/Collection.html\#toArray(T[])}{Collection.toArray(T[])}
