Add changelog entry.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,11 @@
 Version 3.3.0, April 1, 2020
 
+New command-line options:
+  The Nullness Checker now supports the option -Alint=trustArrayLenZero to
+  trust @ArrayLen(0) annotations when determining the type of
+  Collections.toArray. See the new manual section
+  http://checkerframework.org/manual/#nullness-collection-toarray
+
 Renamings:
   -AuseDefaultsForUncheckedCode to -AuseConservativeDefaultsForUncheckedCode
     The old name works temporarily but will be removed in a future release.
