--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,14 @@ Renamings:
   -AuseDefaultsForUncheckedCode to -AuseConservativeDefaultsForUncheckedCode
     The old name works temporarily but will be removed in a future release.
 
+-Ainfer now takes an argument:
+ * -Ainfer=jaifs uses .jaif files to store the results of whole-program inference.
+ * -Ainfer=stubs uses .astub files to store the results of whole-program inference
+ * -Ainfer is deprecated but is same as -Ainfer=jaifs, for backwards compatibility.
+
+New command-line option:
+  -AmergeStubsWithSource If both a stub file and a source file are available, use both.
+
 Implementation details:
  * Removed `@DefaultInUncheckedCodeFor` and
    `@DefaultQualifierInHierarchyInUncheckedCode`.
@@ -26,16 +34,6 @@ by the Nullness Checker or the Initialization Checker.
 
 Closed issues:
 2719, 3001, 3020, 3069, 3093, 3120.
-
--Ainfer now takes an argument:
- * -Ainfer=jaifs uses .jaif files to store the results of whole-program inference.
- * -Ainfer=stubs uses .astub files to store the results of whole-program inference
- * -Ainfer is same as -Ainfer=jaifs, for backwards compatibility.
-
-New command-line option:
-  -AmergeStubsWithSource If both a stub file and a source file are available, use
-                         the GLB of the types in the two. Overrides the default,
-                         which is to ignore the stub file if a source file is present.
 
 ---------------------------------------------------------------------------
 
