--- a/checker/jdk/README
+++ b/checker/jdk/README
@@ -2,8 +2,8 @@ There are two annotated versions of the JDK:
  * A JDK 8 version, in this directory.
  * A JDK 11 version, in repository https://github.com/typetools/jdk .
 Whenever you make a change to one, you *must* make the corresponding change
-to the other.  Please push changes to a branch of your fork of `jdk` *before*
-you make your a pull request for the branch of your fork of `checker-framework`.
+to the other.  Please make the `jdk` pull request first, and refer to its
+URL in your `checker-framework` pull request.
 
 The jdk8.jar file in this directory is built from here, then
 copied to ../dist/ .  The Checker Framework always uses a jdk8.jar file
