--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Implementation details:
    pass it to `report`, then call new methods `reportError` and
    `reportWarning` instead.
  * AbstractTypeProcessor#typeProcessingOver() always gets called.
+ * Renamed `org.checkerframework.framework.type.AnnotatedTypeReplacer` to
+   `org.checkerframework.framework.type.AnnotatedTypeCopierWithReplacement`.
+ * Renamed `org.checkerframework.framework.type.visitor.AnnotatedTypeMerger`
+   to `org.checkerframework.framework.type.visitor.AnnotatedTypeReplacer`.
 
 ---------------------------------------------------------------------------
 
