--- a/docs/manual/troubleshooting.tex
+++ b/docs/manual/troubleshooting.tex
@@ -645,7 +645,7 @@ including the JDK, see Section~\ref{reporting-bugs-annotated-libraries}.
 Alternately (especially if your communication is not a bug report), you can
 send mail to checker-framework-dev@googlegroups.com.
 We welcome suggestions, annotated libraries, bug fixes, new
-features, new checker plugins, and other improvements.
+features, new checkers, and other improvements.
 
 Please ensure that your bug report is clear and that it is complete.
 Otherwise, we may be unable to understand it or to reproduce it, either of
