--- a/docs/manual/nullness-checker.tex
+++ b/docs/manual/nullness-checker.tex
@@ -504,7 +504,8 @@ Constant Value Checker (see \chapterpageref{constant-value-checker}) to verify
 that annotation.
 
 Note: The nullness of the returned array doesn't depend on the passed array nullness.
-This is a fact about \sunjavadoc{java.base/java/util/Collection.html\#toArray(T[])}{Collection.toArray(T[])},
+This is a fact about
+\sunjavadoc{java.base/java/util/Collection.html\#toArray(T[])}{Collection.toArray(T[])},
 not a limitation of this heuristic.
 
 
