returns receiver manual

--- a/docs/manual/manual.tex
+++ b/docs/manual/manual.tex
@@ -71,6 +71,7 @@ describes how to \textbf{install and use} pluggable type-checkers.
 \input{aliasing-checker.tex}
 \input{purity-checker.tex}
 \input{constant-value-checker.tex}
+\input{returns-receiver-checker.tex}
 \input{reflection-checker.tex}
 
 % Special subtyping checker and external checkers:
