Warning suppression keys must be a logical subpart of the suppressed message

--- a/docs/manual/warnings.tex
+++ b/docs/manual/warnings.tex
@@ -136,8 +136,10 @@ MyFile.java:107: error: [dereference.of.nullable] dereference of possibly-null r
 %END LATEX
 
 \noindent
-You are allowed to use any substring of a message key.  Beware writing a very
-short messagekey, because it might suppress more warnings than you expect.
+You are allowed to use any substring of a message key, so long as it is
+delimited by periods or the end of the key.  We strongly recommend using
+the longest possible message key; a short message might suppress more
+warnings than you expect.
 
 If the \emph{checkername} part is omitted, the \<@SuppressWarnings> applies
 to all checkers.
