--- a/docs/manual/warnings.tex
+++ b/docs/manual/warnings.tex
@@ -137,7 +137,7 @@ MyFile.java:107: error: [dereference.of.nullable] dereference of possibly-null r
 
 \noindent
 You are allowed to use any substring of a message key, so long as it is
-delimited by periods or the end of the key.  We strongly recommend using
+delimited by periods or either end of the key.  We strongly recommend using
 the longest possible message key; a short message might suppress more
 warnings than you expect.
 
