--- a/docs/manual/warnings.tex
+++ b/docs/manual/warnings.tex
@@ -136,8 +136,14 @@ MyFile.java:107: error: [dereference.of.nullable] dereference of possibly-null r
 %END LATEX
 
 \noindent
-You are allowed to use any substring of a message key, so long as it is
-delimited by periods or either end of the key.  We strongly recommend using
+You are allowed to use any substring of a message key, so long as the
+substring extends at each end to a period or an end of the key.  For
+example, to suppress a warning with message key
+\code{"assignment.type.incompatible"}, you could use
+\<@SuppressWarnings("assignment")>,
+\<@SuppressWarnings("assignment.type")>,
+\<@SuppressWarnings("type.incompatible")>, or other variants.
+We recommend using
 the longest possible message key; a short message might suppress more
 warnings than you expect.
 
