--- a/changelog.txt
+++ b/changelog.txt
@@ -16,7 +16,7 @@ argument.  To make the Nullness Checker permit null, pass
 `-Astubs=checker.jar/collection-object-parameters-may-be-null.astub`.
 
 The argument to @SuppressWarnings can be a substring of a message key that
-is delimited by periods and/or either end of the key.  (Previously, any
+extends at each end to a period or an end of the key.  (Previously, any
 substring worked, including the empty string which suppressed all warnings.
 Use "all" to suppress all warnings.)
 
