Remove no-longer-accurate reference to purity error messages

--- a/docs/manual/warnings.tex
+++ b/docs/manual/warnings.tex
@@ -115,8 +115,7 @@ Section~\ref{subtyping-using}.)
 Sometimes, a checker honors \emph{checkername} arguments; use
 the \code{-AshowSuppressWarningKeys} command-line option to see them.
 Using \code{"all"} as the checkername applies to all checkers; this is not
-recommended, except for messages common to all checkers such as
-purity-related messages when using \<-AcheckPurityAnnotations>.
+recommended, except for messages common to all checkers.
 
 The argument \emph{messagekey} is the message key for the error.
 Each warning message from the compiler gives the most specific
