--- a/docs/manual/introduction.tex
+++ b/docs/manual/introduction.tex
@@ -196,7 +196,7 @@ optional step.
   \url{https://checkerframework.org/checker-framework-3.2.0.zip}
 
 \item
-  Unzip it to create a \code{checker-framework} directory.
+  Unzip it to create a \code{checker-framework-\ReleaseVersion{}} directory.
 
 \item
   \label{installation-configure-step}%
